fix: fixed an overflow issue on liked-songs page

--- a/css/styles.css
+++ b/css/styles.css
@@ -1284,7 +1284,6 @@ table {
 #liked-songs-table {
   width: 100%;
   padding: 16px;
-  overflow: hidden;
 }
 
 .songs-table {
