--- a/scss/_liked-songs.scss
+++ b/scss/_liked-songs.scss
@@ -70,7 +70,6 @@ table {
 #liked-songs-table {
   width: 100%;
   padding: 16px;
-  overflow: hidden;
 }
 
 .songs-table {
